# old-catchall-importer

./: .gitignore  README.md  docker-compose.yaml  export.sh  import.sh  pyproject.toml
export_from_old_db/: db.py  db_vocab_lookups.py  export_eppns.py  export_records.py  export_users.py  main.py  migrate_refactored.py  models.py
export_from_old_db/mapping_tables/: affiliations.csv  affiliations_mapping.csv  contributorsroles.csv  funders.csv  funding_trio.json  languages.csv  licenses.csv  relationtypes.csv  resourcetypes.csv  subjectcategories.csv
import_to_new_repo/: communities.py  fix_imported_records.py  records.py  send_invitations.py  uploader.py  users.py
